# quadcopter-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: PID.h  config.h  debug.h  global.h  mathHelp.h  motors.h  vectorTypes.h
src/: PID.cpp  debug.cpp
